nodeapp-deployment.yml
apiVersion: apps/v1
kind: Deployment  
metadata:
  name: node-app-deployment  
  labels:
    app: node-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
      - name: node-app
        image: naimatazmdev/demoapp:v3
        ports:
        - containerPort: 3000
