mongo-express-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: NodePort
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
    nodePort: 30001
