nodeapp-service.yml
apiVersion: v1
kind: Service 
metadata:
  name: node-app-service
spec:
  selector:
    app: node-app
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 3000
