ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  namespace: my-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mynodeapp.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: node-app-service
            port:
              number: 8080
      # - path: /mongo-express
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: mongo-express-service
      #       port:
      #         number: 8081
